# django-pgvector

./: .gitignore  manage.py  pyproject.toml
config/: settings.py
djpgv/config/: asgi.py  env.py  wsgi.py
djpgv/config/django/: base.py
djpgv/core/: apps.py  exception_handler.py  exceptions.py  mixins.py  models.py  utils.py
djpgv/users/: admin.py  apps.py  models.py
djpgv/users/migrations/: 0001_initial.py
