[project]
name = "django-pgvector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.11",
    "django-environ==0.12.1",
    "psycopg2==2.9.11",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.2.0",
    "django-stubs==5.2.9",
    "djangorestframework-stubs==3.16.8",
    "ipdb==0.13.13",
    "ipython==9.10.0",
    "pre-commit==4.5.1",
    "ruff==0.15.1",
]

[tool.ruff]
extend-exclude = ["*/migrations/*"]
line-length = 120
